--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
 <section id="gsm" class="itin">
   <h2>Great Smoky Mountains — 5-Day Itinerary</h2>
 
+  <h3>Places to Stay</h3>
+  <ul>
+    <li><a href="https://www.cabinsofthesmokymountains.com/pigeon-forge-cabin-rental/Black_Bear_Hideaway.html/51#cabin-availability" target="_blank">Black Bear Hideaway</a> - Pigeon Forge cabin rental</li>
+    <li><a href="https://www.cabinsofthesmokymountains.com/pigeon-forge-cabin-rental/Lofty_Pines.html/173#cabin-availability" target="_blank">Lofty Pines</a> - Pigeon Forge cabin rental</li>
+    <li><a href="https://www.vrbo.com/3967544?chkin=2025-06-14&chkout=2025-06-20&d1=2025-06-14&d2=2025-06-20&startDate=2025-06-14&endDate=2025-06-20&x_pwa=1&rfrr=HSR&pwa_ts=1748367062905&referrerUrl=aHR0cHM6Ly93d3cudnJiby5jb20vSG90ZWwtU2VhcmNo&useRewards=false&adults=2&children=1_12%2C1_7&regionId=8264&destination=Pigeon%20Forge%2C%20Tennessee%2C%20United%20States%20of%20America&destType=BOUNDING_BOX&latLong=35.794472%2C-83.562454&nightly_price=0%2C299&privacyTrackingState=CAN_TRACK&searchId=4a03fc10-59ca-4291-a211-5b6e602b22bd&sort=RECOMMENDED&top_dp=146&top_cur=USD&userIntent=&selectedRoomType=104272706&selectedRatePlan=0004124b0ad488454552bba5a54061001b6c&expediaPropertyId=104272706" target="_blank">VRBO Cabin #3967544</a> - Pigeon Forge (June 14-20 dates)</li>
+  </ul>
+
   <h3>Age 7</h3>
   <ol>
     <li>Easy stroll to <a href="https://www.nps.gov/grsm/planyourvisit/laurel-falls.htm" target="_blank">Laurel Falls</a> ➜ Junior Ranger kit at Sugarlands</li>
